--- a/just-blog/package.json
+++ b/just-blog/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@uiw/react-markdown-editor": "^6.1.4",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
