--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "@google/genai": "^1.11.0"
   }
 }
