--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@google/genai": "^1.11.0",
+    "@google/genai": "^1.14.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -23,7 +23,6 @@
     "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "@google/genai": "^1.11.0"
+    "nodemon": "^3.1.10"
   }
 }
