--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,7 +5,7 @@
       "src": "server.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["dist/**"]
+        "includeFiles": ["dist/**", "node_modules/@google/genai/**"]
       }
     }
   ],
